[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.545098, 0.0352941, 0.0352941, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( -1, 0, -8, 1, 0, 8, 0, 0, 0 ),
"tilts": PoolRealArray( 0 )
}

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.0352941, 0.545098, 0.054902, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 18.5578, 0 )
shadow_enabled = true

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999051, 0.0435496, 0, -0.0435496, 0.999051, 0, 50, 58.9727 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 14.8487, -0.52969 )
projection = 1
size = 35.0
near = 0.01

[node name="Cursor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 2, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Mouse_path" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 0 )
curve = SubResource( 5 )

[node name="Mouse_follow" type="PathFollow" parent="Mouse_path"]
transform = Transform( -0.999189, 0, 0.0402755, 0, 1, 0, -0.0402755, 0, -0.999189, -17, 0, 2 )

[node name="Cursor2follow" type="MeshInstance" parent="Mouse_path/Mouse_follow"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.9056, 2, 2.68306 )
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -27, 2, 0 )
